--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bulletin Board</title>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <script src="https://kit.fontawesome.com/e3ffbdedb4.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Sacramento&display=swap" rel="stylesheet">
+    <title>shop projekt koncowy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
